# rust-rep-star

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  Shuttle.toml  api.http
.shuttle/: config.toml
api/actix/: Cargo.toml
api/actix/src/: main.rs
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: lib.rs  testimonials.rs
api/lib/src/insight_repository/: mod.rs  postgres_insight_repository.rs
api/lib/src/metric_repository/: mod.rs  postgres_metric_repository.rs
api/lib/src/testimonial_embedding_repository/: mod.rs  postgres_testimonial_embedding_respository.rs
api/lib/src/testimonial_repository/: mod.rs  postgres_testimonial_repository.rs
api/lib/src/user_repository/: mod.rs  postgres_user_repository.rs
api/lib/src/v1/: insight.rs  metric.rs  mod.rs  testimonial.rs  user.rs
api/migrations/: 0000_init.sql  0001_testimonial_embedding.sql  0001_testimonial_embeddings.sql  0002_testimonial_create_vectorizer.sql
api/server/: Cargo.toml
api/server/src/: main.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
front/public/: tailwind.css  tailwind.css.br
front/src/: lib.rs  main.rs  routes.rs
front/src/components/: add_testimonial.rs  insight.rs  insight_loader.rs  mod.rs  testimonial.rs  testimonial_list.rs  testimonial_loader.rs  time_duration_buttons.rs
front/src/layouts/: main.rs  metric_tracking_wrapper.rs  mod.rs
front/src/pages/: add_testimonial.rs  embed_testimonial.rs  home.rs  manage_testimonial.rs  mod.rs  testimonial.rs  testimonials.rs
front/src/queries/: insights.rs  metrics.rs  mod.rs  testimonials.rs
front/src/utils/: debounce.rs  mod.rs
shared/: Cargo.toml
shared/src/: models.rs  queries.rs
static/: index.html  tailwind.css  tailwind.css.br
static/assets/dioxus/: rep-star.js  rep-star.js.br  rep-star_bg.wasm  rep-star_bg.wasm.br
static/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
