[workspace]
members = [
    "api/lib",
    "api/shuttle", 
    "api/actix",
    "front",
    "shared"
]
resolver = "2"


[workspace.dependencies]
# internal
shared = { version = "0.1.0", path = "./shared" }
api-lib = { version = "0.1.0", path = "./api/lib" }
# actix and sqlx
tokio = "1.41.1"
actix-web = "4.9.0"
actix-files = "0.6.6"
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }
# serde
serde = { version = "1.0.214", features = ["derive"] }
# utils
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["serde", "v4", "js"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15"
