[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
# shared
shared = { path = "../shared" }

uuid = { version = "1.11.0", features = ["v4"] }
dioxus = { version = "0.5.6", features = ["web", "router"] }
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# Debug
dioxus-logger = "0.5.1"
web-sys = "0.3.72"
manganis = "0.2.2"
