[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
# shared
shared = { workspace = true }
# dioxus
dioxus = { version = "0.5.6", features = ["web", "router"] }
dioxus-web = "0.5.6"
dioxus-sdk = { version = "0.5.1", features = [
    "utils",
], categories = [
    "wasm",
] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
log = "0.4.19"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
serde_json = "1.0.132"
dioxus-logger = "0.5.1"
rand = "0.8.5"