[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# shared
shared = { path = "../../shared" }
# actix
actix-web = "4.9.0"
# database
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
# tracing
tracing = "0.1.40"
# utils
async-trait = "0.1.82"
uuid = { version = "1.11.0", features = ["serde", "v4", "js"] }

[dev-dependencies]
actix-rt = "2.10.0"