[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true, features = ["backend"] }

# db
sqlx = { workspace = true }
# actix
actix-web = { workspace = true }
# serde
serde = { workspace = true }
serde_json = "1.0.132"
# utils
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1.83"
tracing = { workspace = true }

[dev-dependencies]
actix-rt = "2"

