[package]
name = "api-rep-star"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = { path = "../lib" }
actix-web = "4.9.0"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-static-folder= "0.28.0"
tokio = "1.41.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1.40"
# static
actix-files = "0.6.6"