[package]
name = "api-rep-star"
version = "0.1.0"
edition = "2021"

[dependencies]
# internal
api-lib = { path = "../lib" }
# shuttle
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
# actixs
actix-web = "4.9.0"
tokio = "1.41.0"
# db
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1.40"
# static
actix-files = "0.6.6"