[package]
name = "api-rep-star"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
sqlx = { version = "0.8", default-features = false, features = [
    "tls-native-tls",
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1"