[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
# internal
api-lib = { workspace = true }
# shuttle
shuttle-runtime = "0.48.0"
shuttle-actix-web = "0.48.0"
# db
# shuttle-aws-rds = { version = "0.18.0", features = ["postgres"] }
sqlx = { workspace = true }
# actixs
actix-web = { workspace = true }
actix-files = { workspace = true }
tokio = "1.41.1"
tracing = { workspace = true }